[tool.poetry]
name = "pycounts_kyleahn"
version = "0.1.0"
description = "A package for counting words in a text file"
authors = ["Kyle Ahn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
