[tool.poetry]
name = "pycounts_kyleahn"
version = "0.1.0"
description = "A package for counting words in a text file"
authors = ["Kyle Ahn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
update = "^0.0.1"
myst-nb = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
sphinx-rtd-theme = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
